# src/main/java/com/bootcamp/btmsaccounts/model/SecondaryAccount.java
@@ -1,0 +1,18 @@
+package com.bootcamp.btmsaccounts.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+import org.springframework.data.mongodb.core.mapping.Field;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class SecondaryAccount {
+    @Field("accountId")
+    private String accountId;
+    @Field("order")
+    private int order;
+}
